清理未使用的成员