@@ -471,6 +471,6 @@ public class MathUtils {
     }
 
     public static int clamp(int value, int min, int max) {
-        return Math.min(Math.max(value, min), max);
+        return Math.clamp(value, min, max);
     }
 }
